directory for pictures

--- a/TagsCloudVisualization/TagsCloudVisualization.csproj
+++ b/TagsCloudVisualization/TagsCloudVisualization.csproj
@@ -64,5 +64,8 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
