--- a/TagsCloudVisualization/TagsCloudVisualization.csproj
+++ b/TagsCloudVisualization/TagsCloudVisualization.csproj
@@ -41,10 +41,10 @@
   <ItemGroup>
     <Compile Include="CircularCloudLayouter.cs" />
     <Compile Include="CircularCloudLayouterTests.cs" />
-    <Compile Include="GeometryTests.cs" />
-    <Compile Include="Point.cs" />
-    <Compile Include="Rectangle.cs" />
-    <Compile Include="Size.cs" />
+    <Compile Include="PointExtensionsTests.cs" />
+    <Compile Include="PointExtensions.cs" />
+    <Compile Include="RectangleExtensions.cs" />
+    <Compile Include="RectangleExtensionsTests.cs" />
     <Compile Include="TagCloudPainter.cs" />
   </ItemGroup>
   <ItemGroup>
